Fix dropdown menus being too short and narrow
These changes remove the height-setting CSS styles that make drop
down menus in the enrollment steps too short.  They also remove
the width-setting CSS styles that make the provider type menu too
narrow. Changing the width of other menus would disrupt the
positioning of other items near them, so that remains unchanged.

Issue #163: dropdown menus too short and narrow

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -961,12 +961,8 @@ input.date{
   width:10%;
 }
 
-.firstRegistrant .wholeCol select{
-  width:265px;
-  float:left;
-  margin:4px 7px 0;
-  height:20px;
-  line-height:20px;
+.firstRegistrant .wholeCol select {
+  margin: 0px 7px;
 }
 
 /* buttonBox */
@@ -1244,8 +1240,6 @@ input.date{
   width:212px;
   float:left;
   margin:4px 7px 0;
-  height:20px;
-  line-height:20px;
 }
 
 .newEnrollmentPanel .checkbox{
@@ -1483,7 +1477,7 @@ input.date{
 .practicePanel .inlineBox select,
 .practicePanel .reimbursementAddressRow select{
   width:120px;
-  margin:6px 27px 0px 7px;
+  margin: 0px 27px 0px 7px;
 }
 
 .practicePanel .addPracticeLocations input.normalInput{
@@ -1526,9 +1520,7 @@ input.date{
 .practicePanel select{
   width:212px;
   float:left;
-  margin:4px 7px 0;
-  height:20px;
-  line-height:20px;
+  margin: 0px 7px;
 }
 
 .practicePanel .addPracticeLocations select{
